api works in docker

--- a/src/orchestration/Dockerfile
+++ b/src/orchestration/Dockerfile
@@ -2,10 +2,12 @@ FROM python
 
 WORKDIR /orchservice
 
+# Pip install
 COPY ./requirements.txt ./requirements.txt
-
 RUN pip install -r requirements.txt
 
+# Copy project files
+COPY data ./data/
 COPY . .
 
 CMD ["python", "apiserve.py"]
