added installation step for R

--- a/src/orchestration/Dockerfile
+++ b/src/orchestration/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /orchservice
 # Pip install
 COPY ./requirements.txt ./requirements.txt
 RUN pip install -r requirements.txt
+RUN apt-get update && apt-get install -y r-base
 
 # Copy project files
 COPY . .
