also works from docker - but try build from base python image instead

--- a/src/databaseservice/Dockerfile
+++ b/src/databaseservice/Dockerfile
@@ -2,7 +2,7 @@ FROM microsoft/mssql-tools
 
 WORKDIR /dbservice
 
-RUN apt-get update && apt-get install -y python3 python-pip gcc g++ build-essential u:nixodbc-dev
+RUN apt-get update && apt-get install -y python3 python-pip gcc g++ build-essential unixodbc-dev msodbcsql17
 
 COPY ./requirements.txt ./requirements.txt
 
