--- a/src/model_executor/rserve/etc/Rserve.conf
+++ b/src/model_executor/rserve/etc/Rserve.conf
@@ -1,9 +1,9 @@
 workdir /rbase-server/workdir
 port 6311
 interactive no
-pwdfile /rbase-server/Rserv.pwd
+pwdfile /rbase-server/etc/Rserv.pwd
 remote enable
 auth required
 encoding utf8
 
-source /rbase-server/profile.conf
+source /rbase-server/etc/Rserve-init.conf
