--- a/src/model_executor/rserve/etc/Rserve.conf
+++ b/src/model_executor/rserve/etc/Rserve.conf
@@ -1,7 +1,7 @@
 workdir /rbase-server/workdir
 port 6311
 interactive no
-pwdfile /rbase-server/etc/Rserv.pwd
+pwdfile /rbase-server/etc/Rserve.pwd
 remote enable
 auth required
 encoding utf8
