added service to call r-model independently

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,8 @@ services:
       context: src/orchestrator_service
     ports:
       - 5000:5000
+  r-model-training:
+    build:
+      context: src/r_model_training
+    ports:
+      - 9091:9090
