--- a/src/database_service/Dockerfile
+++ b/src/database_service/Dockerfile
@@ -2,11 +2,11 @@ FROM microsoft/mssql-tools
 
 WORKDIR /dbservice
 
-RUN apt-get update && apt-get install -y python3 python-pip gcc g++ build-essential unixodbc-dev msodbcsql17
+RUN apt-get update && ACCEPT_EULA=Y apt-get install -y python3 python-pip gcc g++ build-essential unixodbc-dev msodbcsql17
 
 COPY ./requirements.txt ./requirements.txt
 
-#RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
 
